--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="	crossorigin="anonymous"></script>
       <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css"/>
       <link rel="stylesheet" href="assets/style/index.css"/>
+      <title>{{ .Idek }}</title>
   </head>
   <body>
      <div class="container">
