--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="	crossorigin="anonymous"></script>
       <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css"/>
       <link rel="stylesheet" href="assets/style/index.css"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
       <title>{{ .Idek }}</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
        <h1>{{ .Idek }}</h1>
        <hr />
        <div class="row">
-           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+           <div class="col-md-3 col-lg-3">
              <img src="assets/images/profile picture.jpg" class="img-circle profile-pic"/>
              <h2 class="text-center">Ryan (rbrick)</h2>
              <hr />
@@ -22,17 +22,17 @@
              </p>
            </div>
            <!-- GitHub  -->
-           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+           <div class="col-md-3 col-lg-3">
              <a href="https://github.com/rbrick"><i class="fa fa-github social-icon social-github" aria-hidden="true"></i></a>
            </div>
 
            <!-- Twitter  -->
-           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+           <div class="col-md-3 col-lg-3">
              <a href="https://twitter.com/rbrickstudios"><i class="fa fa-twitter social-icon social-twitter" aria-hidden="true"></i></a>
            </div>
 
           <!-- Steam  -->
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+          <div class="col-md-3 col-lg-3">
             <a href="https://steamcommunity.com/id/rbrick"><i class="fa fa-steam-square social-icon social-steam" aria-hidden="true"></i></a>
           </div>
       </div>
