--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta charset="utf-8">
       <title>{{ .Idek }}</title>
   </head>
-  <body class="test">
+  <body>
      <div class="container">
        <h1>{{ .Idek }}</h1>
        <hr />
