--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <hr />
        <div class="row">
            <div class="col-md-3 col-lg-3">
-             <img src="assets/images/profile picture.jpg" class="img-circle profile-pic"/>
+             <img src="assets/images/profile_picture.jpg" alt="Profile Picture" class="img-circle profile-pic"/>
              <h2 class="text-center">Ryan (rbrick)</h2>
              <hr />
              <p>
