--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
            <!-- Twitter  -->
            <div class="col-md-3 col-lg-3">
-             <a href="https://twitter.com/rbrickstudios"><i class="fa fa-twitter social-icon social-twitter" aria-hidden="true"></i></a>
+             <a href="https://twitter.com/unsigned_rbrick"><i class="fa fa-twitter social-icon social-twitter" aria-hidden="true"></i></a>
            </div>
 
           <!-- Steam  -->
