--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <hr />
        <div class="row">
            <div class="col-md-3 col-lg-3">
-             <img src="https://avatars2.githubusercontent.com/u/5923432?v=3&s=460" alt="Profile Picture" class="img-circle profile-pic"/>
+             <img src="https://avatars.githubusercontent.com/rbrick" alt="Profile Picture" class="img-circle profile-pic"/>
              <h2 class="text-center">Ryan (rbrick)</h2>
              <hr />
              <p>
