--- a/rower/index.html
+++ b/rower/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
     <style>
         body {
-            font-family: 'Swanky and Moo Moo', cursive;
+            font-family: 'Work Sans', sans-serif;
         }
 
         .center {
