--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              <h2 class="text-center">Ryan (rbrick)</h2>
              <hr />
              <p>
-               I am a twenty year old developer and student. I love Java, and Go. I fancy girls. Currently employed at FrozenOrb LLC.
+               I am a twenty year old developer and student. I love Java and Go.
              </p>
            </div>
            <!-- GitHub  -->
