--- a/fall-web/intro/index.html
+++ b/fall-web/intro/index.html
@@ -37,7 +37,7 @@
             <article>
                 <img id="profile" src="assets/images/profile.jpg" alt="ugly guy"/><br/>
                 <p>
-                    My name is Ryan, and I am a 22 year old software developer and computer science major. <br />
+                    My name is <em>Ryan</em>, and I am a 22 year old software developer and computer science major. <br />
                 </p>
             </article>
         </section>
@@ -49,16 +49,16 @@
                 <p>
                     I enjoy programming, working out, hiking, space, photographing landscapes, and writing.
                     I also very much enjoy film making and love going out to the cinema. One day I hope to write and direct a film of my own.
-                    My influences include the obvious picks: Kubrick, Hitchcock, Scorsese, Tarantino, etc. But recently I have made it my goal to out and watch
-                    films by lesser known film makers. I recently watched <a href="https://www.imdb.com/title/tt5691670/">"Under The Silver Lake"</a> by
-                    David Robert Mitchell. Great film. Weird. But great. At this point I have no idea what else to say. Bye.
+                    My influences include the obvious picks: <i>Kubrick</i>, <i>Hitchcock</i>, <i>Tarantino</i>, etc. But recently I have made it my goal to out and watch
+                    films by lesser known film makers. I recently watched <a href="https://www.imdb.com/title/tt5691670/"><b>Under The Silver Lake</b></a> by
+                    <i>David Robert Mitchell</i>. Great film. Weird. But great. At this point I have no idea what else to say. Bye.
                 </p>
             </article>
             <br />
         </section>
         <section>
             <header>
-                <h2>Some pictures I'm somewhat proud of</h2>
+                <h2>Some pictures I'm <em>somewhat</em> proud of</h2>
                 <article>
                     <!-- I have a line break quota to fill. Don't judge.  -->
                     <img class="photos" src="assets/images/lens_flare_leaves.jpg" width="300" alt="Lens Flare Leaves" /><br />
