--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <h2 class="text-center">Ryan (rbrick)</h2>
              <hr />
              <p>
-               I am a twenty-four year old developer and student. I love Java, and Go.
+               I am a twenty-five year old developer and student. I love Java, and Go.
              </p>
            </div>
            <!-- GitHub  -->
