--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <div class="col-md-3 col-lg-3">
             <a href="https://steamcommunity.com/id/rbrick"><i class="fa fa-steam-square social-icon social-steam" aria-hidden="true"></i></a>
           </div>
+
+<a rel="me" href="https://astrodon.social/@ryan" hidden>Mastodon</a>
+
       </div>
      </div>
   </body>
